--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,4 @@
-<<<<<<< HEAD
 .DS_Store
 */.DS_Store
 .sass-cache
-=======
-_site
->>>>>>> eb84c18bc01c37714bda4f22f11df07580934934
+bower_components
